...
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/product_name"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
...
                android:layout_marginStart="20sp"
                android:text="@string/ingredients_label"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <cn.lankton.flowlayout.FlowLayout
                android:id="@+id/flowlayoutIngredientTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:lineSpacing="10dp">

            </cn.lankton.flowlayout.FlowLayout>
...
