...
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="15dp"
            android:text="@string/barcode_product_activity_manual_input_label"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/barcodeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <EditText
...
